--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,18 @@
 .App {
   text-align: center;
 }
-
+* {
+  margin: 0;
+  padding: 0;
+}
+body{
+  /* background-color: #D6EFD8; */
+  width: '100%';
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
